--- a/public/scss/components/_sidebar.scss
+++ b/public/scss/components/_sidebar.scss
@@ -140,5 +140,5 @@
   background: lighten($sidebarBg, 10);
   padding-left: 35px;
   color: $sidebarOptionHover;
-  border-left: 4px solid $red;
+  border-left: 4px solid $blue;
 }
